[project]
name = "voxmol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "ipython>=9.6.0",
    "matplotlib>=3.10.6",
    "numpy<=2.0.0",
    "openbabel-wheel>=3.1.1.22",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyuul>=0.4.2",
    "pyyaml>=6.0.3",
    "rdkit>=2025.9.1",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch==2.0.1",
    "torchmetrics>=1.0.3",
    "torchvision>=0.15.2",
    "tqdm>=4.66.5",
    "wandb>=0.22.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
